# solify

./: .gitignore  Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: account_order.rs  dependency_analyzer.rs  lib.rs  pda_detector.rs
analyzer_onchain/: Cargo.toml
analyzer_onchain/src/: dependency_analyzer.rs  lib.rs  setup_generator.rs  test_case_generator.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: gen_test.rs  inspect.rs  mod.rs
cli/src/tui/: app.rs  events.rs  mod.rs  widgets.rs
cli/src/utils/: mod.rs
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  types.rs
generator/: Cargo.toml
generator/src/: lib.rs  template.rs  writer.rs
parser/: Cargo.toml
parser/examples/: parse_idl.rs
parser/idls/: counter_program.json  dice.json  greeting_program.json  token_vault.json  voting_dapp.json
parser/src/: lib.rs
solana-program/idls/: journal.json
solana-program/solify/: Anchor.toml  codama.json  package.json
solana-program/solify/programs/solify/: Cargo.toml
solana-program/solify/programs/solify/src/: constants.rs  error.rs  events.rs  lib.rs
solana-program/solify/programs/solify/src/analyzer/: account_order.rs  dependency_analyzer.rs  mod.rs  pda_detector.rs  setup_generator.rs  test_case_generator.rs
solana-program/solify/programs/solify/src/instructions/: generate_metadata.rs  initialize_user.rs  mod.rs  store_idl.rs  update_idl.rs
solana-program/solify/programs/solify/src/state/: idl_storage.rs  mod.rs  program_history.rs  test_metadata_config.rs  user_config.rs
solana-program/solify/programs/solify/src/tests/: mod.rs  parse_idl.rs  parsed_idl.rs
solana-program/solify/programs/solify/src/tests/idls/: amm.json  counter_program.json  mini_escrow.json
solana-program/solify/programs/solify/src/tests/outputs/: test_for_idl1.txt  test_for_idl2.txt  test_for_idl3.txt  test_for_idl4.txt  test_for_idl5.txt
solana-program/solify/programs/solify/src/types/: dependencies.rs  idl_data.rs  mod.rs  test_metadata.rs
solana-program/solify/programs/solify/tests/: solify.rs
solana-program/solify/tests/: solify.ts
tests/: counter_program.test.ts  journal.test.ts
tests/tests/: {generated}.ts  {program_name}.ts  {{ program_name_pascal }}.ts
