[workspace]
resolver = "2"

members = [
    "cli",
    "parser",
    "analyzer",
    "generator",
    "client",
    "common",
]

[workspace.dependencies]
# Anchor & Solana
anchor-lang = "0.32.1"
anchor-client = "0.32.1"
solana-sdk = "3.0.0"
solana-client = "3.0.10"
solana-program = "3.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.7"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.1"
indicatif = "0.18.2"

# TUI
ratatui = "0.29.0"
crossterm = "0.29.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Utilities
bs58 = "0.5"
hex = "0.4"
chrono = "0.4"

# Template engine
handlebars = "6.3.2"

# Graph algorithms
petgraph = "0.8.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Regex
regex = "1.10"
