[package]
name = "solify-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Sehrawat <sehrawataditya22@gmail.com>"]
description = "Program analysis engine for Solify - analyzes dependencies, PDAs, and account ordering"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adisehrawat/solify"
keywords = ["solana", "anchor", "testing", "analysis"]
categories = ["development-tools"]

[dependencies]
# Graph algorithms for dependency analysis
petgraph = "0.8.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Internal dependencies
solify-common = { path = "../common" }

[dev-dependencies]
pretty_assertions = "1.4"

