[package]
name = "solify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solify"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.1"
indicatif = "0.18.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Internal dependencies
solify-common = { path = "../common" }
solify-parser = { path = "../parser" }
solify-analyzer = { path = "../analyzer" }
solify-generator = { path = "../generator" }
solify-client = { path = "../client" }

