[package]
name = "solify"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Sehrawat <sehrawataditya22@gmail.com>"] 
description = "A CLI tool to generate anchor program tests for Solana"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adisehrawat/solify"
keywords = ["solana", "anchor", "testing", "cli", "blockchain"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "solify"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.1"
indicatif = "0.18.2"

# TUI
ratatui = "0.29.0"
crossterm = "0.29.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Solana
solana-sdk = "3.0.0"
solana-client = "3.0.10"
solana-transaction-status = "3.0.0"
solana-commitment-config = "3.0.0"

# Utilities
chrono = "0.4"
bs58 = "0.5"
shellexpand = "3.1"

# Internal dependencies (use path for development, version for publishing)
# When publishing, change these to: solify-common = "0.1.0", etc.
solify-common = "0.1.0"
solify-parser = "0.1.0"
solify-generator = "0.1.0"
solify-client = "0.1.0"

