[package]
name = "solify-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana
solana-sdk = "3.0.0"
solana-client = "3.0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Async
tokio = { version = "1.35", features = ["full"] }

# Logging
log = "0.4"

# Utilities
chrono = "0.4"

# Internal dependencies
solify-common = { path = "../common" }
