[package]
name = "solify-common"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Sehrawat <sehrawataditya22@gmail.com>"]
description = "Shared types, errors, and utilities for Solify"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adisehrawat/solify"
keywords = ["solana", "anchor", "testing"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
solana-sdk = { workspace = true }
