[package]
name = "solify-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Template engine
handlebars = "6.3.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
chrono = "0.4"

# Internal dependencies
solify-common = { path = "../common" }
tera = "1.0.0"

[dev-dependencies]
tempfile = "3.8"

