[package]
name = "solify-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana
solana-sdk = "3.0.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Common types
solify-common = { path = "../common" }


