[package]
name = "solify-parser"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Sehrawat <sehrawataditya22@gmail.com>"]
description = "IDL parser for Solify - parses Anchor IDL files and extracts program structure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adisehrawat/solify"
keywords = ["solana", "anchor", "testing", "idl", "parser"]
categories = ["development-tools"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana
solana-sdk = "3.0.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Common types
solify-common = "0.1.0"

# Analyzer
solify-analyzer = "0.1.0"
