[package]
name = "solify"
version = "0.1.0"
description = "Solify on-chain program for automated test generation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solify"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm = "0.8.1"
solana-sdk = "3.0.0"
